--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="a">
-                <img src="./img/globallabs.jpg" width="220" height="80">
+                <img src="./img/globallabs.png" width="100" height="90">
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Quem somos</a>
+                        <a href="#quemsomos" class="nav-link">Quem somos</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Parceiros</a>
@@ -22,10 +22,35 @@
                     <li class="nav-item">
                         <a href="#" class="nav-link">Serviços</a>
                     </li>
-                    
                 </ul>
-
         </nav>
+
+        <section id="quemsomos">
+            <div class="container-fluid quem-somos text-center margin">
+                <h3>Quem somos</h3>
+                <img src="./img/pexels-monoar-rahman-109371.jpg" class=" rounded-circle"width="200" height="200">
+                <h3>Somos um time comprometidos com os resultados</h3>
+            </div>
+        </section>
+        <section id="parceiros">
+            <div class="container-fluid text-center margin parceiros">
+                <h3>Parceiros</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img src="./img/dio.png" width="100%">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="./img/dio.png" width="100%">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="./img/dio.png" width="100%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </body>
 
 </html>
