finalização do projeto em bootstrap

--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
                         <a href="#quemsomos" class="nav-link">Quem somos</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Parceiros</a>
+                        <a href="#parceiros" class="nav-link">Parceiros</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Serviços</a>
+                        <a href="#servicos" class="nav-link">Serviços</a>
                     </li>
                 </ul>
         </nav>
 
         <section id="quemsomos">
             <div class="container-fluid quem-somos text-center margin">
-                <h3>Quem somos</h3>
-                <img src="./img/pexels-monoar-rahman-109371.jpg" class=" rounded-circle"width="200" height="200">
-                <h3>Somos um time comprometidos com os resultados</h3>
+                <h3 class="margin">Quem somos</h3>
+                <img src="./img/pexels-monoar-rahman-109371.jpg" class="rounded-circle" width="200" height="200">
+                <h3 class="margin">Somos um time comprometidos com os resultados</h3>
             </div>
         </section>
         <section id="parceiros">
             <div class="container-fluid text-center margin parceiros">
-                <h3>Parceiros</h3>
+                <h3 class="margin">Parceiros</h3>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4">
@@ -50,6 +50,33 @@
                 </div>
             </div>
         </section>
+        <section id="servicos">
+            <div class="container-fluid text-center margin servicos">
+                <h3 class="margin">Serviços</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <p>Aplicativos para usabilidade de sua empresa.</p>
+                            <img src="./img/pexels-photomix-company-887751.jpg" class="imgserv" widht="350" height="200">
+                        </div>
+                        <div class="col-lg-4">
+                            <p>Softwares que atendam suas necessidades.</p>
+                            <img src="./img/pexels-pixabay-40185.jpg" class="imgserv" widht="350" height="200">
+                        </div>
+                        <div class="col-lg-4">
+                            <p>Sites que te conectam com seus clientes</p>
+                            <img src="img/pexels-caio-67112.jpg" class="imgserv" widht="350" height="200">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="container-fluid text-center bg-footer margin">
+            <p>
+                Desenvolvido por Caique Fernandes
+            </p>
+        </footer>
 
     </body>
 
